[GTK] media/video-seek-past-end-playing.html times out https://bugs.webkit.org/show_bug.cgi?id=84858

Patch by Dominik Röttsches <dominik.rottsches@linux.intel.com> on 2012-05-07
Reviewed by Philippe Normand.

Source/WebCore:

Removing the intentional state change to PAUSED on didEnd().
My understanding is that the fix works because the additional
state transition to PAUSED was resetting the internal m_seeking state to early,
so that updatePlayState() in HTMLMediaElement was not able to
correctly figure out/recover playstate after seeking.

No new tests, covered by existing media tests, and fixing
video-seek-past-end-playing.html flakiness on GTK, failure on EFL.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:

LayoutTests:

video-seek-past-end-playing.html should work reliably after fix, removing.

* platform/gtk/test_expectations.txt:

git-svn-id: svn://svn.chromium.org/blink/trunk@116328 bbb929c8-8fbe-4397-9dbb-9b2b20218538