third_party/WebKit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -1369,8 +1369,6 @@ void MediaPlayerPrivateGStreamer::didEnd()
 
     m_isEndReached = true;
 
-    gst_element_set_state(m_playBin, GST_STATE_PAUSED);
-
     timeChanged();
 }
 
